<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- Parent -->
  <parent>
    <groupId>org.jboss</groupId>
    <artifactId>jboss-parent</artifactId>
    <version>39</version>
    <relativePath />
  </parent>

  <!-- Model Version -->
  <modelVersion>4.0.0</modelVersion>

  <!-- Artifact Configuration -->
  <groupId>org.jboss.arquillian.extension</groupId>
  <artifactId>arquillian-warp-aggregator</artifactId>
  <version>1.1.0.Final-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Arquillian Warp: Parent</name>
  <description>Taking tests from Client to the Server and back</description>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Lukas Fryc</name>
      <email>lfryc@redhat.com</email>
    </developer>
  </developers>

  <issueManagement>
    <system>JIRA</system>
    <url>https://issues.jboss.org/browse/ARQ/component/12315782</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git://github.com:arquillian/arquillian-extension-warp.git</connection>
    <developerConnection>scm:git:git@github.com:arquillian/arquillian-extension-warp.git</developerConnection>
    <url>https://github.com/arquillian/arquillian-extension-warp</url>
    <tag>HEAD</tag>
  </scm>

  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/arquillian/arquillian-extension-warp/actions</url>
  </ciManagement>

  <properties>
    <!-- JBoss Parent -->
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.source>11</maven.compiler.source>

    <!-- Arquillian -->
    <version.servlet_api>3.0.1</version.servlet_api>
    <version.arquillian_core>1.8.0.Final</version.arquillian_core>
    <version.arquillian_drone>3.0.0-alpha.8</version.arquillian_drone>
    <version.arquillian_jacoco>1.1.0</version.arquillian_jacoco>

    <version.littleproxy>2.0.22</version.littleproxy>
    <!--Littleproxy logging is done through SL4J and thus Log4j: -->
    <version.log4j>2.24.0</version.log4j>
    <version.javassist>3.30.2-GA</version.javassist>
    <version.httpcore>5.2.3</version.httpcore>

    <!-- Tests -->
    <version.junit>4.13.2</version.junit>
    <version.mockito>4.9.0</version.mockito>
    <version.jacoco>0.8.11</version.jacoco>
    <version.shrinkwrap.resolver>3.2.1</version.shrinkwrap.resolver>
    <version.jboss_spec>3.0.3.Final</version.jboss_spec>
    <surefire.security.manager/>
    <modular.jdk.args/>

    <!-- Container Versions -->
    <version.tomee>8.0.14</version.tomee>
    <version.glassfish>5.1.0</version.glassfish>
    <version.tomcat6>6.0.35</version.tomcat6>
    <version.tomcat7>7.0.26</version.tomcat7>
    <!-- Don't upgrade beyond WildFly 26 for EE 8, WF 27 and newer is Jakarta EE 10 -->
    <version.wildfly>26.1.3.Final</version.wildfly>
    <version.wildfly.arquillian.container>5.0.0.Final</version.wildfly.arquillian.container>

    <additionalparam>-Xdoclint:none</additionalparam>
  </properties>

  <modules>
    <!-- build modules -->
    <module>build</module>
    <module>build/bom</module>
    <module>build/resources</module>
    <module>build/depchain</module>
    <module>build/ftest-base</module>

    <!-- main modules -->
    <module>api</module>
    <module>spi</module>
    <module>impl</module>
    <module>ftest</module>

    <!-- extensions -->
    <module>extension/jsf</module>
    <module>extension/jsf-ftest</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <localCheckout>true</localCheckout>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <argLine>${surefire.security.manager} ${modular.jdk.args}</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>jdk-modular</id>
      <activation>
        <jdk>[17,)</jdk>
      </activation>
      <properties>
        <modular.jdk.args>
          --add-exports=java.desktop/sun.awt=ALL-UNNAMED
          --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
          --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED
          --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED
          --add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED
          --add-opens=java.base/java.io=ALL-UNNAMED
          --add-opens=java.base/java.lang=ALL-UNNAMED
          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
          --add-opens=java.base/java.net=ALL-UNNAMED
          --add-opens=java.base/java.security=ALL-UNNAMED
          --add-opens=java.base/java.util=ALL-UNNAMED
          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
          --add-opens=java.management/javax.management=ALL-UNNAMED
          --add-opens=java.naming/javax.naming=ALL-UNNAMED
        </modular.jdk.args>
      </properties>
    </profile>
    <profile>
      <id>jdk23-security-manager</id>
      <activation>
        <jdk>[23,)</jdk>
      </activation>
      <properties>
        <surefire.security.manager>
          -Djava.security.manager=allow
        </surefire.security.manager>
      </properties>
    </profile>
  </profiles>

</project>
